Fix spacing of the images in both mobile and desktop

--- a/assets/site/post-photography.scss
+++ b/assets/site/post-photography.scss
@@ -3,8 +3,15 @@
 @charset "utf-8";
 @import "base";
 
+body {
+    column-gap: 0;
+    margin-right: 0;
+    @include breakpoint(mobile) {
+        margin-right: $minimum-mobile-side-padding;
+    }
+}
 main {
-    width: calc(100vw - #{$minimum-side-padding} - 14rem);
+    width: calc(100vw - 13rem);
     height: calc(100vh - #{2 * $minimum-side-padding});
     @include breakpoint(mobile) {
         width: auto;
@@ -18,23 +25,18 @@ main {
     height: 100%;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
+    gap: $minimum-side-padding;
     @include breakpoint(mobile) {
         height: auto;
         overflow-x: initial;
         scroll-snap-type: none;
         flex-direction: column;
+        gap: $minimum-mobile-side-padding;
     }
 
     > * {
         flex-shrink: 0;
         scroll-snap-align: center;
-
-        padding-right: $minimum-side-padding;
-        @include breakpoint(mobile) {
-            padding-right: 0;
-            padding-top: $minimum-mobile-side-padding;
-            padding-bottom: $minimum-mobile-side-padding;
-        }
     }
 
     article {
@@ -42,6 +44,12 @@ main {
         max-height: 100%;
         align-self: center;
         overflow: scroll;
+
+        padding-left: $minimum-side-padding;
+        @include breakpoint(mobile) {
+            padding-left: 0;
+        }
+
         @include breakpoint(mobile) {
             align-self: flex-start;
             overflow: initial;
@@ -73,17 +81,26 @@ main {
     }
 
     > div {
-        width: 100%;
+        &:last-of-type {
+            padding-right: $minimum-side-padding;
+            @include breakpoint(mobile) {
+                padding-right: 0;
+            }
+        }
+        max-width: calc(100% - #{2 * $minimum-side-padding});
         height: 100%;
         @include breakpoint(mobile) {
+            max-width: initial;
+            width: 100%;
             height: auto;
         }
     }
 
     img {
-        width: 100%;
+        max-width: 100%;
         height: 100%;
         @include breakpoint(mobile) {
+            width: 100%;
             height: auto;
             max-height: calc(100vh - #{2 * $minimum-mobile-side-padding});
         }
